--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
-  
 {
   "name": "create-next-example-app",
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "export": "next build && next export"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
